      [ticket:1576]

    - Fixed the behavior of extract() to apply operator
      precedence rules to the "::" operator when applying
      the "timestamp" cast - ensures proper parenthesization.  
      [ticket:1611]

- mssql
    - Changed the name of TrustedConnection to
      Trusted_Connection when constructing pyodbc connect
      arguments [ticket:1561]

- ext 
    - A column can be added to a joined-table declarative 
      superclass after the class has been constructed 
      (i.e. via class-level attribute assignment), and
      the column will be propagated down to 
      subclasses. [ticket:1570]  This is the reverse
      situation as that of [ticket:1523], fixed in 0.5.6.

    - Fixed a slight inaccuracy in the sharding example.
      Comparing equivalence of columns in the ORM is best 
      accomplished using col1.shares_lineage(col2).
      [ticket:1491]
    
    - Removed unused `load()` method from ShardedQuery.
      [ticket:1606]
      
0.5.6
=====
- orm
    - Fixed bug whereby inheritance discriminator part of a
      composite primary key would fail on updates.
      Continuation of [ticket:1300].

    - Fixed bug which disallowed one side of a many-to-many 
      bidirectional reference to declare itself as "viewonly"
      [ticket:1507]
    
    - Added an assertion that prevents a @validates function
      or other AttributeExtension from loading an unloaded
      collection such that internal state may be corrupted.
      [ticket:1526]
      
    - Fixed bug which prevented two entities from mutually
      replacing each other's primary key values within a single
      flush() for some orderings of operations.  [ticket:1519]
      
    - Fixed an obscure issue whereby a joined-table subclass
      with a self-referential eager load on the base class
      would populate the related object's "subclass" table with
      data from the "subclass" table of the parent.
      [ticket:1485]
    