@@ -898,6 +898,13 @@ CHANGES
       Trusted_Connection when constructing pyodbc connect
       arguments [ticket:1561]
 
+- oracle
+     - The "table_names" dialect function, used by MetaData
+       .reflect(), omits "index overflow tables", a system
+       table generated by Oracle when "index only tables"
+       with overflow are used.  These tables aren't accessible
+       via SQL and can't be reflected.  [ticket:1637]
+       
 - ext 
     - A column can be added to a joined-table declarative 
       superclass after the class has been constructed 
